crates/rapidus_parser/src/lexer/snapshots/rapidus_parser__lexer__tests__lex_hello.snap
---
source: crates/rapidus_parser/src/lexer/mod.rs
assertion_line: 136
expression: lexer.read_token().unwrap()
---
Some(
    Ident(
        Ident(
            "hello",
        ),
    ),
)
