crates/rapidus_parser/src/lexer/snapshots/rapidus_parser__lexer__tests__lex_multi_line_comment.snap
---
source: crates/rapidus_parser/src/lexer/mod.rs
assertion_line: 266
expression: tokens
---
[
    Ident(
        Ident(
            "hello",
        ),
    ),
    Whitespace(
        " ",
    ),
    Comment(
        MultiLine(
            " comment コメント ",
        ),
    ),
    Whitespace(
        " ",
    ),
    LineTerminator(
        "\n",
    ),
    Whitespace(
        "    ",
    ),
    Ident(
        Ident(
            "world",
        ),
    ),
]
