crates/rapidus_parser/src/lexer/snapshots/rapidus_parser__lexer__tests__lex_punct_2.snap
---
source: crates/rapidus_parser/src/lexer/mod.rs
assertion_line: 319
expression: tokens
---
[
    Ident(
        Ident(
            "a",
        ),
    ),
    Op(
        PlusPlus,
    ),
    Whitespace(
        " ",
    ),
    Op(
        Plus,
    ),
    Whitespace(
        " ",
    ),
    Op(
        MinusMinus,
    ),
    Ident(
        Ident(
            "c",
        ),
    ),
]
