crates/rapidus_parser/src/lexer/snapshots/rapidus_parser__lexer__tests__lex_reserved_if.snap
---
source: crates/rapidus_parser/src/lexer/mod.rs
assertion_line: 162
expression: lexer.read_token().unwrap()
---
Some(
    Ident(
        Reserved(
            If,
        ),
    ),
)
