crates/rapidus_parser/src/lexer/snapshots/rapidus_parser__lexer__tests__lex_reserved_words.snap
---
source: crates/rapidus_parser/src/lexer/mod.rs
assertion_line: 174
expression: tokens
---
[
    Ident(
        Reserved(
            If,
        ),
    ),
    Whitespace(
        " ",
    ),
    Ident(
        Reserved(
            While,
        ),
    ),
    Whitespace(
        "    ",
    ),
    Ident(
        Reserved(
            Await,
        ),
    ),
]
