crates/rapidus_parser/src/lexer/snapshots/rapidus_parser__lexer__tests__lex_single_line_comment.snap
---
source: crates/rapidus_parser/src/lexer/mod.rs
assertion_line: 252
expression: tokens
---
[
    Ident(
        Ident(
            "hello",
        ),
    ),
    Comment(
        SingleLine(
            "comment",
        ),
    ),
    Ident(
        Ident(
            "world",
        ),
    ),
]
