crates/rapidus_parser/src/lexer/snapshots/rapidus_parser__lexer__tests__lex_str.snap
---
source: crates/rapidus_parser/src/lexer/mod.rs
assertion_line: 471
expression: tokens
---
[
    Str(
        Str {
            val: "hello",
            raw: "\"hello\"",
        },
    ),
    Whitespace(
        " ",
    ),
    Str(
        Str {
            val: "world",
            raw: "'world'",
        },
    ),
]
